# shroom

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
devutils/: file_utils.py  plot.py
examples/: asm_bsm_aria_errors.py  asm_bsm_aria_render.py  binaural_rotation_example.py  binaural_using_asm.py  binaural_using_asm_with_aa_magls.py  binaural_using_bsm.py  binaural_using_hrtf.py  binaural_using_magls_hrtf.py
projects/aa_magls_project/: main.py
projects/asm_project/: errors.py  main.py
projects/bsm_project/: errors.py  main.py
src/shroom/: __init__.py  paths.py
src/shroom/acoustics/: hrtf_processing.py  physics.py  processors.py  room.py  spatial_signal.py  spherical_array.py
src/shroom/data/: default_hrtf.md  default_hrtf.sofa
src/shroom/encoders/: asm.py  bsm.py
src/shroom/geometry/: sampling.py
src/shroom/utils/: amb_utils.py  dsp_utils.py  file_utils.py  grid_utils.py  math_utils.py  rotation_utils.py  sofa.py
src/shroom_dev/: errors.py  file_utils.py  sound.py
tests/: test_aa_magls.py  test_aria_asm_bsm.py  test_array.py  test_asm.py  test_bsm.py  test_filter_precision.py  test_hrtf.py  test_processors.py  test_room.py  test_rotation.py  test_sampling.py  test_sofa.py  test_spatial_signal.py  test_spatial_signal_comprehensive.py  test_spherical_array.py  test_src_imports.py
tests/reference_data/: aa_magls_hrtf_filters.npz  asm_filters.npz  bsm_filters.npz  bsm_magls_filters.npz  generate_filter_references.py  magls_hrtf_filters.npz
